force-app/main/default/objects/transaction_list__c/transaction_list__c.object-meta.xml
<CustomObject>
    <label>transaction list</label>
    <nameField>
        <displayFormat>JL-{0000}</displayFormat>
        <label>transaction list Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>transaction lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>