force-app/main/default/objects/transaction_list__c/fields/award_points__c.field-meta.xml
<CustomField>
    <fullName>award_points__c</fullName>
    <label>award points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>