force-app/main/default/objects/transaction_list__c/fields/expiry_date__c.field-meta.xml
<CustomField>
    <fullName>expiry_date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>expiry date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>